# github-publisher

./: .gitignore  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  create-release.sh  github_publisher.py  main.py  publish-pypi.sh  publish-tool-no-ssh.sh  publish-tool.sh  publish.py  pyproject.toml  release-all-tools.sh  requirements.txt  setup.py
github_publisher/: __init__.py  main.py
github_publisher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
